--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,10 +1,7 @@
 * {
 	margin: 0;
 	padding: 0;
-	width: 100vw;
-	height: 100vh;
-	pointer-events: none;
-	user-drag: none; 
+	-webkit-user-drag: none;
     user-select: none;
 	-moz-user-select: none;
 	-webkit-user-drag: none;
