--- a/frontend/src/styles/LightSwitch.css
+++ b/frontend/src/styles/LightSwitch.css
@@ -1,46 +1,49 @@
-#lightswitch-container{
-	width: 2vh;
-	height: 4vh;
-	display: flex;
-	justify-content: center;
-	border-style: solid;
-	border-width: 1px;
+#lightswitch-container {
+    width: 2vh;
+    height: 4vh;
+    padding: 1px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    border-style: solid;
+    border-width: 1px;
 }
 
-#lightswitch{
-	width: 2vh;
-	height: 2vh;
-	box-shadow: 200px 200px 400px 200px inset;
-	-webkit-box-shadow: 200px 200px 400px 200px inset;
-	-moz-box-shadow: 200px 200px 400px 200px inset;
+#lightswitch {
+    width: 100%;
+    height: 25%;
+    position: relative;
+    box-shadow: 200px 200px 400px 200px inset;
+    -webkit-box-shadow: 200px 200px 400px 200px inset;
+    -moz-box-shadow: 200px 200px 400px 200px inset;
 }
 
-.on{
-	transform: translateY(0);
-	animation-name: on;
-	animation-duration: 0.3s;
+.on {
+    top: 0%;
+    animation-name: on;
+    animation-duration: 0.1s;
 }
 
-.off{
-	transform: translateY(2vh);
-	animation-name: off;
-	animation-duration: 0.3s;
+.off {
+    top: 75%;
+    animation-name: off;
+    animation-duration: 0.1s;
 }
 
-@keyframes off{
-	0%{
-		transform: translateY(0);
-	}
-	100%{
-		transform: translateY(2vh)
-	}
+@keyframes off {
+    0% {
+        top: 0%;
+    }
+    100% {
+        top: 75%;
+    }
 }
 
-@keyframes on{
-	0%{
-		transform: translateY(2vh);
-	}
-	100%{
-		transform: translateY(0);
-	}
+@keyframes on {
+    0% {
+        top: 75%;
+    }
+    100% {
+        top: 0%;
+    }
 }
