--- a/frontend/src/styles/FancyDisplay.css
+++ b/frontend/src/styles/FancyDisplay.css
@@ -1,9 +1,8 @@
 #fancy-display-container {
     width: 100%;
     height: 100%;
-    display: flex;
+    padding: 5vh;
+    box-sizing: border-box;
     position: absolute;
     z-index: 0;
-    justify-content: center;
-    align-items: center;
 }
