--- a/frontend/src/styles/Landing.css
+++ b/frontend/src/styles/Landing.css
@@ -1,9 +1,20 @@
 #landing-container {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#landing-page {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    z-index: 1;
 }
 
 #splash-art {
