--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -16,8 +16,8 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    border-style: solid;
-    border-width: 2px;
+    outline-style: solid;
+    outline-width: 2px;
 }
 
 #theme-selector-container {
