--- a/frontend/src/styles/FancyDisplay.css
+++ b/frontend/src/styles/FancyDisplay.css
@@ -2,7 +2,23 @@
     width: 100%;
     height: 100%;
     padding: 5vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     box-sizing: border-box;
     position: absolute;
     z-index: 0;
+}
+
+#fancy-display {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+#p5 {
+    display: inline;
 }
