removed animation for flickering to work better with p5

--- a/frontend/src/styles/FancyDisplay.css
+++ b/frontend/src/styles/FancyDisplay.css
@@ -16,9 +16,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    box-sizing: border-box;
 }
 
-#p5 {
-    display: inline;
+.react-p5-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
