added symbols for light switch, upgraded point cloud, default dark mode

--- a/frontend/src/styles/LightSwitch.css
+++ b/frontend/src/styles/LightSwitch.css
@@ -18,6 +18,10 @@
     -moz-box-shadow: 200px 200px 400px 200px inset;
 }
 
+.symbol {
+    font-family: monospace;
+}
+
 .on {
     top: 0%;
     animation-name: on;
