--- a/frontend/src/styles/Landing.css
+++ b/frontend/src/styles/Landing.css
@@ -11,13 +11,22 @@
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    justify-content: left;
+    align-items: top;
+    text-align: left;
     position: absolute;
     z-index: 1;
+    padding: 2.5vh;
+    box-sizing: border-box;
 }
 
-#splash-art {
+#header {
     font-family: monospace;
-    font-size: 1vw;
+    font-size: 2.5em;
+}
+
+.content {
+    font-family: monospace;
+    font-size: 1.5em;
 }
