added all content in the projects page, need to add scroll bar

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -7,4 +7,10 @@
     -webkit-user-drag: none;
     -webkit-user-select: none;
     -ms-user-select: none;
+	-ms-overflow-style: none;
+	scrollbar-width: none; 
+}
+
+*::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
 }
