--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -1,14 +1,3 @@
-#app-container {
-    padding: 5vh;
-    box-sizing: border-box;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
 #page-container {
     width: 100%;
     height: 100%;
@@ -33,4 +22,30 @@
     top: 0;
     left: 0;
     z-index: 1;
+}
+
+@media only screen and (width >= 961px) {
+    #app-container {
+        padding: 5vh;
+        box-sizing: border-box;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+}
+
+@media only screen and (width < 961px) {
+    #app-container {
+        padding: 10vh 5vh 5vh 5vh;
+        box-sizing: border-box;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
 }
