--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -1,18 +1,35 @@
-#navbar {
-    width: max-content;
-    height: 5vh;
-    left: 5vh;
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    display: flex;
-    align-items: center;
-}
-
 .links {
     text-decoration: none;
     color: inherit;
     font-family: monospace;
     font-size: 1.25em;
     margin-right: 1vw;
+}
+
+@media only screen and (width >= 961px) {
+    #navbar {
+        width: max-content;
+        height: 5vh;
+        left: 5vh;
+        position: absolute;
+        z-index: 1;
+        top: 0;
+        display: flex;
+        align-items: center;
+    }
+}
+
+@media only screen and (width < 961px) {
+    #navbar {
+        width: max-content;
+        height: 10vh;
+        left: 5vh;
+        position: absolute;
+        z-index: 1;
+        top: 0;
+        display: flex;
+		flex-direction: column;
+        justify-content: center;
+		text-align: left;
+    }
 }
