--- a/frontend/src/styles/Works.css
+++ b/frontend/src/styles/Works.css
@@ -1,33 +1,39 @@
-#projects-container {
+#works-container {
     width: 100%;
     height: 100%;
     position: relative;
     display: flex;
 }
 
-.projects-tile {
+.works-tile {
     text-align: left;
 }
 
-.project-title {
+.work-title {
     font-family: monospace;
     font-size: 1.25em;
 }
 
-.project-description {
+#unrelated {
+    font-family: monospace;
+    font-size: 1.25em;
+}
+
+.work-description {
     font-family: monospace;
     font-size: 1em;
     padding-left: 1em;
+	padding-top: 1em;
 }
 
-.project-description > a {
-    font-family: monospace;
-    text-decoration: none;
-    color: inherit;
+.work-details{
+	font-family: monospace;
+	font-size: 1em;
+	padding-left: 1em;
 }
 
 @media only screen and (width >= 961px) {
-    #projects-page {
+    #works-page {
         width: 100%;
         height: 100%;
         display: grid;
@@ -44,7 +50,7 @@
 }
 
 @media only screen and (width < 961px) {
-    #projects-page {
+    #works-page {
         width: 100%;
         height: 100%;
         display: grid;
