--- a/src/styles/FancyDisplay.css
+++ b/src/styles/FancyDisplay.css
@@ -1,15 +1,3 @@
-#fancy-display-container {
-    width: 100%;
-    height: 100%;
-    padding: 5vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-sizing: border-box;
-    position: absolute;
-    z-index: 0;
-}
-
 #fancy-display {
     width: 100%;
     height: 100%;
@@ -22,4 +10,33 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@media only screen and (width >= 667px) {
+    #fancy-display-container {
+        width: 100%;
+        height: 100%;
+        padding: 5vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-sizing: border-box;
+        position: absolute;
+        z-index: 0;
+    }
+}
+
+@media only screen and (width < 667px) {
+    #fancy-display-container {
+        width: 100%;
+        height: 100%;
+        padding: 10vh 5vh 5vh 5vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-sizing: border-box;
+        position: absolute;
+        z-index: 0;
+		top: 0;
+    }
 }
