--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -29,7 +29,7 @@
         padding: 5vh;
         box-sizing: border-box;
         width: 100vw;
-        height: 100vh;
+        height: 100dvh;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -42,7 +42,7 @@
         padding: 10vh 5vh 5vh 5vh;
         box-sizing: border-box;
         width: 100vw;
-        height: 100vh;
+        height: 100dvh;
         display: flex;
         justify-content: center;
         align-items: center;
